[tool.poetry]
name = "bix_account_restful_using_python_flask"
version = "0.1.0"
description = ""
authors = ["Hao Wu <echowuhao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
pytest = "^6.2.5"
Flask-JWT-Extended = "^4.3.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
